--- a/index.html
+++ b/index.html
@@ -89,39 +89,51 @@
                     </div>
                 </div>
 
-                <!-- Coming Soon Games -->
+                <!-- Crash Game -->
                 <div
-                    class="bg-white/5 backdrop-blur-sm rounded-xl p-6 border border-white/10"
+                    class="bg-white/10 backdrop-blur-sm rounded-xl p-6 hover:bg-white/20 transition-all duration-300 transform hover:scale-105"
                 >
                     <div class="text-center">
                         <div
-                            class="w-16 h-16 bg-gradient-to-br from-gray-500 to-gray-600 rounded-full flex items-center justify-center mx-auto mb-4"
+                            class="w-16 h-16 bg-gradient-to-br from-green-500 to-emerald-600 rounded-full flex items-center justify-center mx-auto mb-4"
                         >
-                            <i class="fas fa-clock text-2xl text-white"></i>
+                            <i
+                                class="fas fa-chart-line text-2xl text-white"
+                            ></i>
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-2">
-                            Próximamente
+                            Crash
                         </h3>
-                        <p class="text-gray-400 mb-6">
-                            Más juegos emocionantes están en desarrollo.
-                            ¡Mantente atento para nuevas experiencias!
+                        <p class="text-gray-300 mb-6">
+                            ¡Plántate antes de que se estrelle! El multiplicador
+                            sube exponencialmente. Gestiona tu dinero y decide
+                            cuándo cobrar tus ganancias.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4 justify-center">
                             <span
-                                class="bg-gray-500/20 text-gray-300 px-3 py-1 rounded-full text-sm"
-                                >En desarrollo</span
+                                class="bg-green-500/20 text-green-200 px-3 py-1 rounded-full text-sm"
+                                >Gambling</span
+                            >
+                            <span
+                                class="bg-yellow-500/20 text-yellow-200 px-3 py-1 rounded-full text-sm"
+                                >Estrategia</span
+                            >
+                            <span
+                                class="bg-red-500/20 text-red-200 px-3 py-1 rounded-full text-sm"
+                                >Alto Riesgo</span
                             >
                         </div>
-                        <button
-                            disabled
-                            class="inline-flex items-center px-6 py-3 bg-gray-600 text-gray-400 font-semibold rounded-lg cursor-not-allowed"
+                        <a
+                            href="games/crash/index.html"
+                            class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-green-600 to-emerald-600 hover:from-green-700 hover:to-emerald-700 text-white font-semibold rounded-lg transition-all duration-300 transform hover:scale-105"
                         >
-                            <i class="fas fa-lock mr-2"></i>
-                            Próximamente
-                        </button>
+                            <i class="fas fa-play mr-2"></i>
+                            Jugar Ahora
+                        </a>
                     </div>
                 </div>
 
+                <!-- Coming Soon Games -->
                 <div
                     class="bg-white/5 backdrop-blur-sm rounded-xl p-6 border border-white/10"
                 >
@@ -163,7 +175,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div class="text-center">
                         <div class="text-4xl font-bold text-blue-400 mb-2">
-                            1
+                            2
                         </div>
                         <div class="text-gray-300">Juegos Disponibles</div>
                     </div>
