--- a/games/crash/index.html
+++ b/games/crash/index.html
@@ -191,7 +191,7 @@
                         </div>
 
                         <!-- Botones de apuesta rápida -->
-                        <div class="grid grid-cols-2 gap-2 mb-6">
+                        <div class="grid grid-cols-2 gap-2 mb-4">
                             <button
                                 class="quick-bet bg-blue-500/20 hover:bg-blue-500/30 text-white py-2 px-4 rounded transition-colors"
                                 data-amount="10"
@@ -215,6 +215,16 @@
                                 data-amount="100"
                             >
                                 $100
+                            </button>
+                        </div>
+
+                        <!-- Botón All In -->
+                        <div class="mb-6">
+                            <button
+                                id="allInBtn"
+                                class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-4 rounded-lg transition-colors"
+                            >
+                                🚀 ALL IN - Apostar Todo
                             </button>
                         </div>
 
