--- a/games/memory/index.html
+++ b/games/memory/index.html
@@ -9,6 +9,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         />
+        <link rel="stylesheet" href="../../shared/css/common.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body
@@ -288,6 +289,7 @@
             </div>
         </div>
 
+        <script src="../../shared/js/common.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
