📊 Agregar información de tiempo de desarrollo
⏱️ Información de desarrollo agregada a todos los juegos:
- ✅ Bloques y Bombas: ~1 hora y 30 minutos
- ✅ Crash: ~4 horas
- ✅ Memory: ~3 horas

🏠 Main page actualizado:
- ✅ Sección de información de desarrollo completa
- ✅ Tiempo total: ~10 horas
- ✅ Promedio por juego: ~3h 20m
- ✅ Desglose detallado de cada juego

🎨 Mejoras visuales:
- ✅ Alineación de botones en tarjetas del main page
- ✅ Flexbox para distribución uniforme
- ✅ Botones alineados al mismo nivel
- ✅ Altura consistente de tarjetas

📝 Formato de tiempo mejorado:
- ✅ Formato legible: '1 hora y 30 minutos'
- ✅ Consistencia en todos los juegos
- ✅ Información técnica de correcciones principales

--- a/games/block-bomb/index.html
+++ b/games/block-bomb/index.html
@@ -202,6 +202,26 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Información de desarrollo -->
+            <div
+                class="mt-8 bg-white/5 backdrop-blur-sm rounded-lg p-4 border border-white/10"
+            >
+                <div class="text-center">
+                    <h4 class="text-sm font-semibold text-gray-400 mb-2">
+                        ⏱️ Información de Desarrollo
+                    </h4>
+                    <p class="text-xs text-gray-500">
+                        <strong>Tiempo de desarrollo:</strong> ~1 hora y 30 minutos<br />
+                        <strong>Funcionalidades:</strong> Bloques dinámicos,
+                        sistema de rondas, probabilidades de bomba,
+                        estadísticas<br />
+                        <strong>Correcciones principales:</strong> Ajuste de
+                        probabilidades, sistema de plantarse, integración al
+                        proyecto
+                    </p>
+                </div>
+            </div>
         </div>
 
         <script src="../../shared/js/common.js"></script>
