--- a/games/crash/index.html
+++ b/games/crash/index.html
@@ -292,6 +292,26 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Información de desarrollo -->
+            <div
+                class="mt-8 bg-white/5 backdrop-blur-sm rounded-lg p-4 border border-white/10"
+            >
+                <div class="text-center">
+                    <h4 class="text-sm font-semibold text-gray-400 mb-2">
+                        ⏱️ Información de Desarrollo
+                    </h4>
+                    <p class="text-xs text-gray-500">
+                        <strong>Tiempo de desarrollo:</strong> ~4 horas<br />
+                        <strong>Funcionalidades:</strong> Gráfico en tiempo
+                        real, multiplicador dinámico, historial, scrollbar
+                        personalizado<br />
+                        <strong>Correcciones principales:</strong> Precisión
+                        decimal, multiplicadores sincronizados, animaciones de
+                        crash, modales innecesarios
+                    </p>
+                </div>
+            </div>
         </div>
 
         <script src="../../shared/js/common.js"></script>
