--- a/games/memory/index.html
+++ b/games/memory/index.html
@@ -287,6 +287,20 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Información de desarrollo -->
+            <div class="mt-8 bg-white/5 backdrop-blur-sm rounded-lg p-4 border border-white/10">
+                <div class="text-center">
+                    <h4 class="text-sm font-semibold text-gray-400 mb-2">
+                        ⏱️ Información de Desarrollo
+                    </h4>
+                    <p class="text-xs text-gray-500">
+                        <strong>Tiempo de desarrollo:</strong> ~3 horas<br>
+                        <strong>Funcionalidades:</strong> Selector dinámico, fichas cuadradas, grid adaptativo, animaciones fluidas<br>
+                        <strong>Correcciones principales:</strong> Símbolos únicos, z-index, vibración vertical, overflow, Tailwind CSS
+                    </p>
+                </div>
+            </div>
         </div>
 
         <script src="../../shared/js/common.js"></script>
